@@ -1,3 +1,7 @@
+2005-02-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* configure, configure.in, tclconfig/tcl.m4: update to TEA 3.2
+
 2005-01-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* configure, configure.in (BUILD_vfs): correct from sample default
